Added pdf editor page

--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -10,21 +10,21 @@
         "colorLabel": "Түс",
         "opacityLabel": "Мөлдірлік",
         "alignLabel": "Туралау",
-        "styleLabel": "Мәнер",
+        "styleLabel": "Стиль",
         "bold": "Қалың",
-        "italic": "Көлбеу",
-        "underline": "Асты сызылған",
+        "italic": "Курсив",
+        "underline": "Астын сызу",
         "applyLabel": "Қолдану",
-        "hintDrag": "Орнын таңдау үшін мәтінді бетте сүйреп апарыңыз"
+        "hintDrag": "Орналастыру үшін мәтінді сүйреңіз"
       },
       "signature": {
         "strokeWidthLabel": "Сызық қалыңдығы",
         "opacityLabel": "Мөлдірлік",
         "actionsLabel": "Әрекеттер",
         "applyLabel": "Қолдану",
-        "hintDraw": "Қолтаңбаны өрісте салып, бетке орналастырыңыз",
+        "hintDraw": "Аймақ ішінде қолтаңба салып, бетке орналастырыңыз",
         "title": "Қолтаңба салу",
-        "clear": "Тазарту"
+        "clear": "Тазалау"
       },
       "toolbar": {
         "pageLabel": "Бет",
@@ -37,42 +37,59 @@
         "black": "Қара"
       },
       "title": "Онлайн PDF редакторы",
-      "headline": "PDF файлдарын онлайн өңдеңіз",
-      "subtitle": "Мәтін, қолтаңба қосыңыз, беттерді бұрыңыз және дайын PDF файлын бірнеше секундта жүктеп алыңыз.",
+      "headline": "PDF файлдарын онлайн өңдеу",
+      "subtitle": "Мәтін қосыңыз, қолтаңба қойыңыз және дайын PDF жүктеп алыңыз.",
       "upload": {
         "title": "PDF жүктеу",
-        "add": "Файлдар қосу",
+        "add": "Файл қосу",
         "start": "Өңдеуді бастау",
         "replace": "Файлды ауыстыру",
-        "clear": "Тізімді тазарту",
-        "hint": "Өңдеуді бастау үшін бір немесе бірнеше PDF файлын жүктеңіз.",
-        "singleHelp": "Өңдеу үшін тек бір PDF жүктеуге болады."
+        "clear": "Тізімді тазалау",
+        "hint": "Өңдеуді бастау үшін PDF жүктеңіз.",
+        "singleHelp": "Тек бір PDF жүктеуге болады.",
+        "new": "Жаңа файл жүктеу"
       },
       "pages": "Беттер",
       "page": "Бет",
-      "preview": "Алдын ала қарау",
-      "previewHint": "Алдын ала қарауды көру үшін файл жүктеңіз.",
-      "tools": {
-        "text": "Мәтін",
-        "signature": "Қолтаңба"
-      },
-      "applyText": "Мәтінді қолдану",
-      "applySignature": "Қолтаңбаны қолдану",
+      "preview": "Алдын ала көру",
+      "previewHint": "Алдын ала көру үшін файл жүктеңіз.",
       "actions": {
         "undo": "Болдырмау",
-        "redo": "Қайталау",
-        "download": "Жүктеп алу"
+        "redo": "Қайтару",
+        "download": "Жүктеу"
       },
-      "errors": {
-        "create": "PDF тапсырмасын жасау мүмкін болмады.",
-        "applyText": "Мәтінді қолдану мүмкін болмады.",
-        "applySignature": "Қолтаңбаны қолдану мүмкін болмады.",
-        "undo": "Болдырмау мүмкін болмады.",
-        "redo": "Қайталау мүмкін болмады.",
-        "download": "Файлды жүктеу мүмкін болмады."
+      "editor": {
+        "saveDocument": "Құжатты сақтау",
+        "toolSettings": "Құрал баптаулары",
+        "moveModeHelp": "Жылжыту режимі объектілерді өзгертуге мүмкіндік береді. Сызу режимі тікелей бетке салады. Черновик автоматты түрде сақталады."
       },
-      "dpi": "DPI",
-      "version": "Нұсқа"
+      "toolstrip": {
+        "move": "Жылжыту",
+        "pen": "Қалам",
+        "highlighter": "Маркер",
+        "signature": "Қолтаңба",
+        "rect": "Тіктөртбұрыш",
+        "circle": "Шеңбер",
+        "text": "Мәтін",
+        "image": "Сурет",
+        "undo": "Болдырмау",
+        "redo": "Қайтару",
+        "remove": "Жою",
+        "clearPage": "Бетті тазалау"
+      },
+      "fields": {
+        "color": "Түс",
+        "opacity": "Мөлдірлік",
+        "size": "Өлшем",
+        "shape": "Пішін",
+        "shapeRound": "Дөңгелек",
+        "shapeSquare": "Төртбұрышты",
+        "shapeHelp": "Төртбұрышты пішін тек фигураларға қолданылады. Қалам дөңгелек күйінде қалады.",
+        "textDefaults": "Әдепкі мәтін баптаулары",
+        "textPlaceholder": "Мәтін енгізіңіз...",
+        "fontPlaceholder": "Қаріп (мысалы, Helvetica)",
+        "signatureThickness": "Қолтаңба қалыңдығы"
+      }
     },
     "converter": {
       "title": "Файл конвертері",
