--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -15,14 +15,14 @@
         "italic": "Italic",
         "underline": "Underline",
         "applyLabel": "Apply",
-        "hintDrag": "Drag the text on the page to position it"
+        "hintDrag": "Drag the text to position it"
       },
       "signature": {
         "strokeWidthLabel": "Stroke width",
         "opacityLabel": "Opacity",
         "actionsLabel": "Actions",
         "applyLabel": "Apply",
-        "hintDraw": "Draw inside the box, then place it on the page",
+        "hintDraw": "Draw inside the box and place it on the page",
         "title": "Draw signature",
         "clear": "Clear"
       },
@@ -38,41 +38,58 @@
       },
       "title": "Online PDF Editor",
       "headline": "Edit PDF files online",
-      "subtitle": "Add text, signatures, rotate pages, and download your edited PDF in seconds.",
+      "subtitle": "Add text, signatures and download your edited PDF in seconds.",
       "upload": {
         "title": "Upload PDF",
-        "add": "Add files",
+        "add": "Add file",
         "start": "Start editing",
         "replace": "Replace file",
         "clear": "Clear list",
-        "hint": "Upload one or more PDF files to begin editing.",
-        "singleHelp": "You can upload only one PDF for editing."
+        "hint": "Upload a PDF file to start editing.",
+        "singleHelp": "Only one PDF can be uploaded.",
+        "new": "Upload new file"
       },
       "pages": "Pages",
       "page": "Page",
       "preview": "Preview",
-      "previewHint": "Upload a file to see the preview.",
-      "tools": {
-        "text": "Text",
-        "signature": "Signature"
-      },
-      "applyText": "Apply text",
-      "applySignature": "Apply signature",
+      "previewHint": "Upload a file to see preview.",
       "actions": {
         "undo": "Undo",
         "redo": "Redo",
         "download": "Download"
       },
-      "errors": {
-        "create": "Failed to create PDF job.",
-        "applyText": "Failed to apply text.",
-        "applySignature": "Failed to apply signature.",
-        "undo": "Failed to undo.",
-        "redo": "Failed to redo.",
-        "download": "Failed to download file."
+      "editor": {
+        "saveDocument": "Save document",
+        "toolSettings": "Tool settings",
+        "moveModeHelp": "Move mode lets you resize and move objects. Drawing modes paint directly on the page. Draft is saved automatically."
       },
-      "dpi": "DPI",
-      "version": "Version"
+      "toolstrip": {
+        "move": "Move",
+        "pen": "Pen",
+        "highlighter": "Highlighter",
+        "signature": "Signature",
+        "rect": "Rectangle",
+        "circle": "Circle",
+        "text": "Text",
+        "image": "Image",
+        "undo": "Undo",
+        "redo": "Redo",
+        "remove": "Remove",
+        "clearPage": "Clear page"
+      },
+      "fields": {
+        "color": "Color",
+        "opacity": "Opacity",
+        "size": "Size",
+        "shape": "Shape",
+        "shapeRound": "Round",
+        "shapeSquare": "Square",
+        "shapeHelp": "Square shape applies to objects. Brush remains round.",
+        "textDefaults": "Default text settings",
+        "textPlaceholder": "Enter text...",
+        "fontPlaceholder": "Font (e.g. Helvetica)",
+        "signatureThickness": "Signature thickness"
+      }
     },
     "converter": {
       "title": "File Converter",
