--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -36,49 +36,65 @@
         "white": "Белый",
         "black": "Чёрный"
       },
-      "title": "Онлайн PDF‑редактор",
-      "headline": "Редактируйте PDF‑файлы онлайн",
-      "subtitle": "Добавляйте текст, подписи, поворачивайте страницы и скачивайте готовый PDF за считанные секунды.",
+      "title": "Онлайн PDF-редактор",
+      "headline": "Редактируйте PDF-файлы онлайн",
+      "subtitle": "Добавляйте текст, подписи и скачивайте готовый PDF за считанные секунды.",
       "upload": {
         "title": "Загрузить PDF",
-        "add": "Добавить файлы",
+        "add": "Добавить файл",
         "start": "Начать редактирование",
         "replace": "Заменить файл",
         "clear": "Очистить список",
-        "hint": "Загрузите один или несколько PDF‑файлов, чтобы начать редактирование.",
-        "singleHelp": "Можно загрузить только один PDF для редактирования."
+        "hint": "Загрузите PDF-файл, чтобы начать редактирование.",
+        "singleHelp": "Можно загрузить только один PDF.",
+        "new": "Загрузить новый файл"
       },
       "pages": "Страницы",
       "page": "Страница",
       "preview": "Предпросмотр",
       "previewHint": "Загрузите файл, чтобы увидеть предпросмотр.",
-      "tools": {
-        "text": "Текст",
-        "signature": "Подпись"
-      },
-      "applyText": "Применить текст",
-      "applySignature": "Применить подпись",
       "actions": {
         "undo": "Отменить",
         "redo": "Повторить",
         "download": "Скачать"
       },
-      "errors": {
-        "create": "Не удалось создать PDF‑задачу.",
-        "applyText": "Не удалось применить текст.",
-        "applySignature": "Не удалось применить подпись.",
-        "undo": "Не удалось выполнить отмену.",
-        "redo": "Не удалось выполнить повтор.",
-        "download": "Не удалось скачать файл."
+      "editor": {
+        "saveDocument": "Сохранить документ",
+        "toolSettings": "Настройки инструмента",
+        "moveModeHelp": "Режим перемещения позволяет двигать и изменять объекты. Режимы рисования рисуют прямо по странице. Черновик сохраняется автоматически."
       },
-      "dpi": "DPI",
-      "version": "Версия"
+      "toolstrip": {
+        "move": "Перемещение",
+        "pen": "Карандаш",
+        "highlighter": "Маркер",
+        "signature": "Подпись",
+        "rect": "Прямоугольник",
+        "circle": "Круг",
+        "text": "Текст",
+        "image": "Изображение",
+        "undo": "Отмена",
+        "redo": "Повтор",
+        "remove": "Удалить",
+        "clearPage": "Очистить страницу"
+      },
+      "fields": {
+        "color": "Цвет",
+        "opacity": "Прозрачность",
+        "size": "Размер",
+        "shape": "Форма",
+        "shapeRound": "Круглая",
+        "shapeSquare": "Квадратная",
+        "shapeHelp": "Квадратная форма применяется к фигурам. Кисть остаётся круглой.",
+        "textDefaults": "Настройки текста по умолчанию",
+        "textPlaceholder": "Введите текст...",
+        "fontPlaceholder": "Шрифт (например, Helvetica)",
+        "signatureThickness": "Толщина подписи"
+      }
     },
     "converter": {
       "title": "Конвертер файлов",
       "subtitle": "быстро, аккуратно и без лишней магии ✨",
       "description": "Загрузи файл, выбери формат — и получишь результат. Для изображений можно пачкой до 20 штук.",
-
       "modes": {
         "media": {
           "title": "Изображения",
@@ -93,7 +109,6 @@
           "description": "DOCX ↔ PDF (best effort для PDF→DOCX). По одному файлу."
         }
       },
-
       "panel": {
         "images": {
           "title": "Изображения",
@@ -108,13 +123,11 @@
           "description": "Поддержка: docx и pdf. DOCX→PDF стабильно, PDF→DOCX best effort."
         }
       },
-
       "controls": {
         "formatLabel": "Формат результата",
         "convert": "Convert",
         "converting": "Converting…"
       },
-
       "dropzone": {
         "title": "Перетащи файл сюда",
         "manual": "или выбери вручную",
@@ -123,7 +136,6 @@
         "upload": "Загрузить",
         "clear": "Очистить"
       },
-
       "messages": {
         "noFiles": "Добавь файл(ы) для конвертации.",
         "singleOnly": "В этом режиме можно загрузить только один файл.",
@@ -132,17 +144,14 @@
         "success": "Готово! Файл скачался 👌",
         "error": "Не удалось выполнить конвертацию."
       },
-
       "files": {
         "title": "Файлы",
         "zipHint": "Если файлов больше одного — результат будет zip."
       },
-
       "tips": {
         "imageAlpha": "PNG → JPEG: прозрачность заменится белым фоном.",
         "pdfDocx": "PDF → DOCX: может отличаться от оригинала — это нормально."
       },
-
       "promo": {
         "title": "Нужно больше форматов?",
         "description": "Можно добавить очереди задач, прогресс-бар, авто-zip и пресеты качества.",
