--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -157,6 +157,69 @@
         "description": "Тапсырма кезегі, прогресс жолағы, авто-zip және сапа баптаулары қосуға болады.",
         "cta": "Ұсыныс жіберу"
       }
+    },
+    "dockerSearch": {
+      "title": "Docker тегтері",
+      "headline": "Ең жақсы тегті және алиастарды табу",
+      "subtitle": "Docker Hub тегтерін негізгі нұсқа және (қажет болса) дистрибутив нұсқасы бойынша іздеу. Біз ең жалпы тегті таңдап, бір образға тиесілі барлық алиастарды көрсетеміз.",
+      "fields": {
+        "repo": "Репозиторий",
+        "major": "Негізгі нұсқа",
+        "variant": "Нұсқа"
+      },
+      "placeholders": {
+        "repo": "Мысал: library/amazoncorretto",
+        "major": "Мысал: 17"
+      },
+      "hints": {
+        "repo": "namespace/name форматты қолданыңыз (мысалы, library/amazoncorretto немесе myorg/myimage)."
+      },
+      "variant": {
+        "any": "Кез келген",
+        "alpine": "Alpine",
+        "al2": "Amazon Linux (al2)",
+        "debian": "Debian",
+        "ubuntu": "Ubuntu"
+      },
+      "actions": {
+        "search": "Іздеу",
+        "reset": "Тазалау",
+        "aliases": "Алиастарды көрсету"
+      },
+      "errors": {
+        "title": "Қате пайда болды",
+        "generic": "Деректерді жүктеу мүмкін болмады. Қайтадан көріңіз."
+      },
+      "result": {
+        "title": "Нәтижелер",
+        "matched": "Табылған тегтер",
+        "reason": "Себебі",
+        "bestTag": "Ең жақсы тег",
+        "noBest": "Сәйкес тег табылмады",
+        "fallbacks": "Қолжетімді тегтер",
+        "noFallbacks": "Бұл сұраныс бойынша ештеңе табылмады.",
+        "selected": "Таңдалды",
+        "aliasesTitle": "Алиастар (бір образ)",
+        "aliasesHint": "Тегті таңдап, «Алиастарды көрсету» батырмасын басыңыз.",
+        "digest": "Дайджест",
+        "aliasCount": "Алиастар саны",
+        "noAliases": "Бұл дайджест үшін алиастар табылмады."
+      },
+      "howTitle": "Қалай жұмыс істейді",
+      "how": {
+        "step1": {
+          "title": "Репозиторий мен нұсқаны енгізіңіз",
+          "text": "Біз Docker Hub-тен тегтерді алып, оларды негізгі нұсқа бойынша сүзгіден өткіземіз."
+        },
+        "step2": {
+          "title": "Ең жақсы тегті таңдау",
+          "text": "«17-alpine» немесе «17» сияқты жалпы алиастарға басымдық береміз. Егер олар болмаса, ең жақын нұсқаны таңдаймыз."
+        },
+        "step3": {
+          "title": "Digest бойынша тексеру",
+          "text": "Манифест дайджестін алып, сол образға тиесілі барлық тегтерді көрсетеміз."
+        }
+      }
     }
   },
   "menu": {
