--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -157,6 +157,69 @@
         "description": "Можно добавить очереди задач, прогресс-бар, авто-zip и пресеты качества.",
         "cta": "Написать пожелание"
       }
+    },
+    "dockerSearch": {
+      "title": "Docker-теги",
+      "headline": "Поиск лучшего тега и алиасов",
+      "subtitle": "Поиск тегов Docker Hub по основной версии и (при необходимости) варианту дистрибутива. Мы подберём самый общий тег и покажем все алиасы одного образа.",
+      "fields": {
+        "repo": "Репозиторий",
+        "major": "Основная версия",
+        "variant": "Вариант"
+      },
+      "placeholders": {
+        "repo": "Пример: library/amazoncorretto",
+        "major": "Пример: 17"
+      },
+      "hints": {
+        "repo": "Используйте формат namespace/name (например, library/amazoncorretto или myorg/myimage)."
+      },
+      "variant": {
+        "any": "Любой",
+        "alpine": "Alpine",
+        "al2": "Amazon Linux (al2)",
+        "debian": "Debian",
+        "ubuntu": "Ubuntu"
+      },
+      "actions": {
+        "search": "Найти",
+        "reset": "Сбросить",
+        "aliases": "Показать алиасы"
+      },
+      "errors": {
+        "title": "Произошла ошибка",
+        "generic": "Не удалось загрузить данные. Попробуйте позже."
+      },
+      "result": {
+        "title": "Результаты",
+        "matched": "Найдено тегов",
+        "reason": "Причина",
+        "bestTag": "Лучший тег",
+        "noBest": "Подходящий тег не найден",
+        "fallbacks": "Доступные теги",
+        "noFallbacks": "По запросу ничего не найдено.",
+        "selected": "Выбран",
+        "aliasesTitle": "Алиасы (один образ)",
+        "aliasesHint": "Выберите тег и нажмите «Показать алиасы».",
+        "digest": "Дайджест",
+        "aliasCount": "Алиасов",
+        "noAliases": "Для этого дайджеста алиасы не найдены."
+      },
+      "howTitle": "Как это работает",
+      "how": {
+        "step1": {
+          "title": "Введите репозиторий и версию",
+          "text": "Мы запрашиваем теги из Docker Hub и фильтруем их по основной версии."
+        },
+        "step2": {
+          "title": "Выбираем лучший тег",
+          "text": "Мы отдаём приоритет общим алиасам вроде «17-alpine» или «17». Если их нет — выбираем ближайший вариант."
+        },
+        "step3": {
+          "title": "Проверяем алиасы по digest",
+          "text": "Мы получаем digest манифеста и показываем все теги, указывающие на тот же образ."
+        }
+      }
     }
   },
   "menu": {
