--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -220,6 +220,29 @@
           "text": "Манифест дайджестін алып, сол образға тиесілі барлық тегтерді көрсетеміз."
         }
       }
+    },
+    "title": "Сервистер",
+    "headline": "Қажетті сервисті бірнеше басумен табыңыз",
+    "subtitle": "Санатты таңдаңыз, іздеуді қолданыңыз және жұмысты тез әрі ыңғайлы атқаратын сервисті ашыңыз.",
+    "searchPlaceholder": "Сервистерді іздеу…",
+    "empty": {
+      "title": "Ештеңе табылмады",
+      "text": "Санатты өзгертіп көріңіз немесе сұранысты нақтылаңыз."
+    },
+    "howTitle": "Қалай жұмыс істейді",
+    "how": {
+      "step1": {
+        "title": "Сервисті таңдаңыз",
+        "text": "Санатты қарап шығыңыз немесе іздеу арқылы керегіңізді табыңыз."
+      },
+      "step2": {
+        "title": "Параметрлерді баптаңыз",
+        "text": "Деректерді енгізіп, қажетті опцияларды таңдаңыз — бәрі түсінікті түрде көрсетіледі."
+      },
+      "step3": {
+        "title": "Нәтижені алыңыз",
+        "text": "Сервисті іске қосып, нәтижені бірнеше секундта алыңыз."
+      }
     }
   },
   "menu": {
