--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -220,6 +220,29 @@
           "text": "Мы получаем digest манифеста и показываем все теги, указывающие на тот же образ."
         }
       }
+    },
+    "title": "Сервисы",
+    "headline": "Подберите подходящий сервис за пару кликов",
+    "subtitle": "Выберите категорию, воспользуйтесь поиском и откройте сервис, который решит вашу задачу быстрее и удобнее.",
+    "searchPlaceholder": "Поиск по сервисам…",
+    "empty": {
+      "title": "Ничего не найдено",
+      "text": "Попробуйте изменить категорию или уточнить запрос."
+    },
+    "howTitle": "Как это работает",
+    "how": {
+      "step1": {
+        "title": "Выберите сервис",
+        "text": "Откройте категорию или найдите нужный сервис через поиск."
+      },
+      "step2": {
+        "title": "Настройте параметры",
+        "text": "Заполните данные и выберите нужные опции — всё подсказано и понятно."
+      },
+      "step3": {
+        "title": "Получите результат",
+        "text": "Запустите сервис и получите готовый результат за считанные секунды."
+      }
     }
   },
   "menu": {
