Update services and converter pages;

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -243,6 +243,9 @@
         "title": "Get the result",
         "text": "Run the service and get a ready result in seconds."
       }
+    },
+    "filters": {
+      "all": "All"
     }
   },
   "menu": {
