--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -243,6 +243,9 @@
         "title": "Нәтижені алыңыз",
         "text": "Сервисті іске қосып, нәтижені бірнеше секундта алыңыз."
       }
+    },
+    "filters": {
+      "all": "Все"
     }
   },
   "menu": {
