--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -243,6 +243,9 @@
         "title": "Получите результат",
         "text": "Запустите сервис и получите готовый результат за считанные секунды."
       }
+    },
+    "filters": {
+      "all": "Все"
     }
   },
   "menu": {
