--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -1,4 +1,27 @@
 {
+  "errors": {
+    "kicker": {
+      "notFound": "Бет табылмады",
+      "server": "Сервер қатесі"
+    },
+    "404": {
+      "title": "Бет табылмады",
+      "text": "Бұл бет жоқ немесе жойылған болуы мүмкін."
+    },
+    "500": {
+      "title": "Қате орын алды",
+      "text": "Серверде қате пайда болды. Біз оны түзетумен айналысып жатырмыз."
+    },
+    "actions": {
+      "home": "Басты бетке",
+      "retry": "Қайта көру"
+    },
+    "details": "Техникалық мәліметтер",
+    "links": {
+      "main": "Басты бет",
+      "services": "Қызметтер"
+    }
+  },
   "services": {
     "pdfEditor": {
       "text": {
@@ -92,73 +115,74 @@
       }
     },
     "converter": {
-      "title": "Файл конвертері",
-      "subtitle": "жылдам, таза және артық сиқырсыз ✨",
-      "description": "Файлды жүктеп, форматты таңдаңыз — нәтижені алыңыз. Суреттерді 20-ға дейін топтап жүктеуге болады.",
+      "hero": {
+        "titleLine1": "Файл түрлендіргіші",
+        "titleLine2": "жылдам, таза және артық магиясыз ✨",
+        "description": "Файлды жүктеп, форматты таңдаңыз — дайын нәтиже аласыз. Суреттер үшін бірден 20 файлға дейін."
+      },
       "modes": {
         "media": {
           "title": "Суреттер",
-          "description": "PNG/JPEG/WEBP → бір формат. 20 файлға дейін, ZIP қайтарылады."
+          "desc": "PNG/JPG/WebP түрлендіру. 20 файлға дейін."
         },
         "data": {
           "title": "Деректер",
-          "description": "CSV/JSON/XML → CSV/JSON/XML/XLSX. Бір файл."
+          "desc": "CSV/JSON/XML → CSV/JSON/XML/XLSX. Бір файл."
         },
-        "document": {
+        "docs": {
           "title": "Құжаттар",
-          "description": "DOCX ↔ PDF (PDF→DOCX best effort). Бір файл."
+          "desc": "DOCX ↔ PDF. PDF→DOCX — мүмкіндігінше."
         }
       },
       "panel": {
-        "images": {
-          "title": "Суреттер",
-          "description": "Қолдау: png, jpg/jpeg, webp. Бірнеше файл болса — ZIP."
+        "title": {
+          "media": "Суреттер",
+          "data": "Деректер",
+          "docs": "Құжаттар"
         },
-        "data": {
-          "title": "Деректер",
-          "description": "Қолдау: csv, json, xml. Мақсаттар: csv/json/xml/xlsx."
-        },
-        "documents": {
-          "title": "Құжаттар",
-          "description": "Қолдау: docx және pdf. DOCX→PDF тұрақты, PDF→DOCX best effort."
+        "description": {
+          "media": "Қолдау: png, jpg/jpeg, webp. 20 файлға дейін. Бірнеше болса — ZIP.",
+          "data": "Қолдау: csv, json, xml. Мақсаттар: csv/json/xml/xlsx. Бір файл.",
+          "docs": "Қолдау: docx және pdf. DOCX→PDF тұрақты, PDF→DOCX — best effort."
         }
       },
       "controls": {
-        "formatLabel": "Нәтиже форматы",
-        "convert": "Convert",
-        "converting": "Converting…"
+        "targetFormat": "Нәтиже форматы",
+        "convert": "Түрлендіру",
+        "converting": "Түрлендірілуде…"
       },
       "dropzone": {
         "title": "Файлды осында тастаңыз",
-        "manual": "немесе қолмен таңдаңыз",
-        "support": "Қолдау",
-        "limit": "Шектеу",
-        "upload": "Жүктеу",
+        "orPick": "немесе қолмен таңдаңыз",
+        "support": "Қолдау:",
+        "limit": "Шектеу:",
+        "filesWord": "файл",
+        "pick": "Жүктеу",
         "clear": "Тазалау"
-      },
-      "messages": {
-        "noFiles": "Конвертациялау үшін файл қосыңыз.",
-        "singleOnly": "Бұл режимде тек бір файлға рұқсат етіледі.",
-        "maxFiles": "Ең көбі 20 сурет.",
-        "unsupported": "Қолдау көрсетілмейтін файл",
-        "success": "Дайын! Файл жүктелді 👌",
-        "error": "Конвертация сәтсіз аяқталды."
       },
       "files": {
         "title": "Файлдар",
-        "zipHint": "Бірнеше файл болса — нәтиже ZIP болады."
+        "zipHintMedia": "Бірнеше файл болса — ZIP болады."
       },
       "tips": {
-        "imageAlpha": "PNG → JPEG: мөлдірлік ақ фонға ауыстырылады.",
-        "pdfDocx": "PDF → DOCX: түпнұсқадан айырмашылық болуы мүмкін."
-      },
-      "promo": {
-        "title": "Көбірек формат керек пе?",
-        "description": "Тапсырма кезегі, прогресс жолағы, авто-zip және сапа баптаулары қосуға болады.",
-        "cta": "Ұсыныс жіберу"
+        "pngToJpeg": "PNG → JPEG: мөлдірлік ақ фонмен ауыстырылады.",
+        "pdfToDocx": "PDF → DOCX: түпнұсқадан айырмашылық болуы мүмкін — бұл қалыпты."
       }
     },
     "dockerSearch": {
+      "tabs": {
+        "simple": "Қарапайым іздеу",
+        "advanced": "Кеңейтілген іздеу"
+      },
+      "simple": {
+        "queryLabel": "Сұраныс",
+        "queryPlaceholder": "Мысалы: alpine, slim, debian…",
+        "queryHint": "«alpine», «17-alpine», «18-alpine» сияқты негізгі тегтерді көрсетеміз…",
+        "resultsTitle": "Негізгі тегтер",
+        "resultsCount": "Табылды",
+        "mainTags": "Тегті таңдаңыз",
+        "emptyHint": "Сұранысты енгізіп, «Іздеу» батырмасын басыңыз"
+      },
       "title": "Docker тегтері",
       "headline": "Ең жақсы тегті және алиастарды табу",
       "subtitle": "Docker Hub тегтерін негізгі нұсқа және (қажет болса) дистрибутив нұсқасы бойынша іздеу. Біз ең жалпы тегті таңдап, бір образға тиесілі барлық алиастарды көрсетеміз.",
