--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -92,73 +92,74 @@
       }
     },
     "converter": {
-      "title": "Конвертер файлов",
-      "subtitle": "быстро, аккуратно и без лишней магии ✨",
-      "description": "Загрузи файл, выбери формат — и получишь результат. Для изображений можно пачкой до 20 штук.",
+      "hero": {
+        "titleLine1": "Конвертер файлов",
+        "titleLine2": "быстро, аккуратно и без лишней магии ✨",
+        "description": "Загрузи файл, выбери формат — и получишь результат. Для изображений можно пачкой до 20 штук."
+      },
       "modes": {
         "media": {
           "title": "Изображения",
-          "description": "PNG/JPEG/WEBP → один формат. До 20 файлов, вернём zip."
+          "desc": "Конвертация PNG/JPG/WebP. Можно до 20 файлов."
         },
         "data": {
           "title": "Данные",
-          "description": "CSV/JSON/XML → CSV/JSON/XML/XLSX. По одному файлу."
+          "desc": "CSV/JSON/XML → CSV/JSON/XML/XLSX. По одному файлу."
         },
-        "document": {
+        "docs": {
           "title": "Документы",
-          "description": "DOCX ↔ PDF (best effort для PDF→DOCX). По одному файлу."
+          "desc": "DOCX ↔ PDF. PDF→DOCX best effort."
         }
       },
       "panel": {
-        "images": {
-          "title": "Изображения",
-          "description": "Поддержка: png, jpg/jpeg, webp. До 20 файлов. Если файлов > 1 — вернём zip."
+        "title": {
+          "media": "Изображения",
+          "data": "Данные",
+          "docs": "Документы"
         },
-        "data": {
-          "title": "Данные",
-          "description": "Поддержка: csv, json, xml. Цели: csv/json/xml/xlsx. По одному файлу."
-        },
-        "documents": {
-          "title": "Документы",
-          "description": "Поддержка: docx и pdf. DOCX→PDF стабильно, PDF→DOCX best effort."
+        "description": {
+          "media": "Поддержка: png, jpg/jpeg, webp. До 20 файлов. Если файлов > 1 — вернём zip.",
+          "data": "Поддержка: csv, json, xml. Цели: csv/json/xml/xlsx. По одному файлу.",
+          "docs": "Поддержка: docx и pdf. DOCX→PDF стабильно (через LibreOffice), PDF→DOCX best effort."
         }
       },
       "controls": {
-        "formatLabel": "Формат результата",
-        "convert": "Convert",
-        "converting": "Converting…"
+        "targetFormat": "Формат результата",
+        "convert": "Конвертировать",
+        "converting": "Конвертируем…"
       },
       "dropzone": {
         "title": "Перетащи файл сюда",
-        "manual": "или выбери вручную",
-        "support": "Поддержка",
-        "limit": "Лимит",
-        "upload": "Загрузить",
+        "orPick": "или выбери вручную",
+        "support": "Поддержка:",
+        "limit": "Лимит:",
+        "filesWord": "файл(ов)",
+        "pick": "Загрузить",
         "clear": "Очистить"
-      },
-      "messages": {
-        "noFiles": "Добавь файл(ы) для конвертации.",
-        "singleOnly": "В этом режиме можно загрузить только один файл.",
-        "maxFiles": "Для изображений максимум 20 файлов.",
-        "unsupported": "Неподдерживаемый файл",
-        "success": "Готово! Файл скачался 👌",
-        "error": "Не удалось выполнить конвертацию."
       },
       "files": {
         "title": "Файлы",
-        "zipHint": "Если файлов больше одного — результат будет zip."
+        "zipHintMedia": "Если файлов больше одного — результат будет zip."
       },
       "tips": {
-        "imageAlpha": "PNG → JPEG: прозрачность заменится белым фоном.",
-        "pdfDocx": "PDF → DOCX: может отличаться от оригинала — это нормально."
-      },
-      "promo": {
-        "title": "Нужно больше форматов?",
-        "description": "Можно добавить очереди задач, прогресс-бар, авто-zip и пресеты качества.",
-        "cta": "Написать пожелание"
+        "pngToJpeg": "PNG → JPEG: прозрачность заменится белым фоном.",
+        "pdfToDocx": "PDF → DOCX: может отличаться от оригинала — это нормально."
       }
     },
     "dockerSearch": {
+      "tabs": {
+        "simple": "Обычный поиск",
+        "advanced": "Полный поиск"
+      },
+      "simple": {
+        "queryLabel": "Запрос",
+        "queryPlaceholder": "Например: alpine, slim, debian…",
+        "queryHint": "Покажем основные теги вроде «alpine», «17-alpine», «18-alpine»…",
+        "resultsTitle": "Основные теги",
+        "resultsCount": "Найдено",
+        "mainTags": "Выберите тег",
+        "emptyHint": "Введите запрос и нажмите «Найти»"
+      },
       "title": "Docker-теги",
       "headline": "Поиск лучшего тега и алиасов",
       "subtitle": "Поиск тегов Docker Hub по основной версии и (при необходимости) варианту дистрибутива. Мы подберём самый общий тег и покажем все алиасы одного образа.",
@@ -246,6 +247,29 @@
     },
     "filters": {
       "all": "Все"
+    }
+  },
+  "errors": {
+    "kicker": {
+      "notFound": "Страница не найдена",
+      "server": "Ошибка сервера"
+    },
+    "404": {
+      "title": "Страница не найдена",
+      "text": "Похоже, вы перешли по неверной ссылке или страница была удалена."
+    },
+    "500": {
+      "title": "Что-то пошло не так",
+      "text": "На сервере произошла ошибка. Мы уже работаем над её исправлением."
+    },
+    "actions": {
+      "home": "На главную",
+      "retry": "Повторить"
+    },
+    "details": "Технические детали",
+    "links": {
+      "main": "Главная",
+      "services": "Сервисы"
     }
   },
   "menu": {
