--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -181,7 +181,12 @@
         "resultsTitle": "Негізгі тегтер",
         "resultsCount": "Табылды",
         "mainTags": "Тегті таңдаңыз",
-        "emptyHint": "Сұранысты енгізіп, «Іздеу» батырмасын басыңыз"
+        "emptyHint": "Сұранысты енгізіп, «Іздеу» батырмасын басыңыз",
+        "sort": {
+          "label": "Сұрыптау",
+          "lenAsc": "Ұзындығы бойынша (қысқа → ұзын)",
+          "lenDesc": "Ұзындығы бойынша (ұзын → қысқа)"
+        }
       },
       "title": "Docker тегтері",
       "headline": "Ең жақсы тегті және алиастарды табу",
