--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -158,7 +158,12 @@
         "resultsTitle": "Основные теги",
         "resultsCount": "Найдено",
         "mainTags": "Выберите тег",
-        "emptyHint": "Введите запрос и нажмите «Найти»"
+        "emptyHint": "Введите запрос и нажмите «Найти»",
+        "sort": {
+          "label": "Сортировка",
+          "lenAsc": "По длине (короче → длиннее)",
+          "lenDesc": "По длине (длиннее → короче)"
+        }
       },
       "title": "Docker-теги",
       "headline": "Поиск лучшего тега и алиасов",
