--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -38,7 +38,9 @@
         "copy": "Көшіру",
         "copied": "Көшірілді!",
         "cancel": "Бас тарту",
-        "insert": "Қосу"
+        "insert": "Қосу",
+        "check": "Мәтінді тексеру",
+        "checking": "Тексеру…"
       },
       "format": {
         "bold": "Қалың",
