--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -15,7 +15,9 @@
         "copy": "Скопировать",
         "copied": "Скопировано!",
         "cancel": "Отмена",
-        "insert": "Вставить"
+        "insert": "Вставить",
+        "check": "Проверить текст",
+        "checking": "Проверяю…"
       },
       "format": {
         "bold": "Жирный",
