Add merge JSON service

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,5 +1,70 @@
 {
   "services": {
+    "jsonMerge": {
+      "title": "Объединение JSON",
+      "headline": "Сравнение и мердж переводов",
+      "subtitle": "Загрузите два JSON-файла, сравните различия, выберите источники для ключей и скачайте итоговый результат.",
+      "inputs": {
+        "fileA": "Файл A",
+        "fileB": "Файл B",
+        "hint": "Поддерживаются .json (а также .csv/.xml, если конвертируются в JSON).",
+        "pickFile": "Выбрать файл",
+        "noFile": "Файл не выбран"
+      },
+      "controls": {
+        "view": "Режим",
+        "viewJson": "JSON",
+        "viewTree": "Дерево",
+        "viewFlat": "Flat keys",
+        "truth": "База",
+        "truthA": "База: A",
+        "truthB": "База: B",
+        "sort": "Сортировка",
+        "sortAsc": "A → Z",
+        "sortDesc": "Z → A",
+        "onlyDiff": "Только различия",
+        "minify": "Свернуть",
+        "searchPh": "Поиск по ключам",
+        "searchInValue": "По значениям",
+        "sync": "Синхронизировать",
+        "keyTruth": "Источник ключа",
+        "keyTruthAuto": "Auto",
+        "keyTruthA": "Всегда A",
+        "keyTruthB": "Всегда B"
+      },
+      "row": {
+        "useA": "Взять из A",
+        "useB": "Взять из B",
+        "reset": "Сброс"
+      },
+      "actions": {
+        "addKey": "Добавить ключ",
+        "downloadJson": "Скачать JSON"
+      },
+      "titles": {
+        "truthA": "Сделать A основной базой: совпадающие ключи берём из A, недостающие — из B.",
+        "truthB": "Сделать B основной базой: совпадающие ключи берём из B, недостающие — из A.",
+        "sortAsc": "Сортировать ключи по алфавиту (A → Z).",
+        "sortDesc": "Сортировать ключи по алфавиту (Z → A).",
+        "onlyDiff": "Показывать только ключи, где значения отличаются или ключ есть только с одной стороны.",
+        "minify": "Свернуть JSON в одну строку (компактный вид/экспорт).",
+        "useA": "Подставить значение из A в результат для выбранного ключа.",
+        "useB": "Подставить значение из B в результат для выбранного ключа.",
+        "reset": "Сбросить ручные изменения результата для выбранного ключа.",
+        "addKey": "Добавить новый ключ вручную в результат.",
+        "download": "Скачать итоговый объединённый JSON-файл.",
+        "searchInValue": "Искать не только по ключам, но и по значениям.",
+        "sync": "Синхронизировать подсветку/переход по совпадениям между колонками.",
+        "keyTruthAuto": "Автовыбор источника для ключа (по наличию/Базе).",
+        "keyTruthA": "Всегда брать этот ключ из A.",
+        "keyTruthB": "Всегда брать этот ключ из B."
+      },
+      "errors": {
+        "invalidFile": "Не удалось прочитать файл. Проверьте формат и попробуйте ещё раз.",
+        "invalidJson": "Некорректный JSON."
+      }
+    }
+  },
     "markdownEditor": {
       "title": "Редактор Markdown",
       "headline": "Форматирование текста для мессенджеров",
