Add merge JSON service

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,6 +1,6 @@
 {
   "services": {
-    "jsonMerge": {
+    "mergeJson": {
       "title": "Объединение JSON",
       "headline": "Сравнение и мердж переводов",
       "subtitle": "Загрузите два JSON-файла, сравните различия, выберите источники для ключей и скачайте итоговый результат.",
@@ -63,8 +63,7 @@
         "invalidFile": "Не удалось прочитать файл. Проверьте формат и попробуйте ещё раз.",
         "invalidJson": "Некорректный JSON."
       }
-    }
-  },
+    },
     "markdownEditor": {
       "title": "Редактор Markdown",
       "headline": "Форматирование текста для мессенджеров",
